{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 111,
  "lineage": "8b8e3e57-8dad-4799-9704-0d891e163a36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a43fd0c873b0ccf",
            "arn": "arn:aws:ec2:us-east-1:031864545038:instance/i-01cf7905dab9e9405",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cf7905dab9e9405",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alerce",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d227b15047b2bbc",
            "private_dns": "ip-108-0-0-108.ec2.internal",
            "private_ip": "108.0.0.108",
            "public_dns": "ec2-3-81-93-6.compute-1.amazonaws.com",
            "public_ip": "3.81.93.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-03a1329edf230960f",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f86cc97f49151d96",
            "tags": {
              "Name": "kafka-experiment-kafka"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffb6a0225075efca"
            ]
          },
          "dependencies": [
            "aws_instance.zookeeper",
            "aws_security_group.allow_ssh",
            "aws_subnet.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb466650cf552140",
            "arn": "arn:aws:ec2:us-east-1:031864545038:instance/i-01cf3527cd61972a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cf3527cd61972a7",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alerce",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c034383a43996543",
            "private_dns": "ip-108-0-0-96.ec2.internal",
            "private_ip": "108.0.0.96",
            "public_dns": "ec2-54-210-185-194.compute-1.amazonaws.com",
            "public_ip": "54.210.185.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0daa6cb9b52ff1bc5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f86cc97f49151d96",
            "tags": {
              "Name": "kafka-experiment-prometheus"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffb6a0225075efca"
            ]
          },
          "dependencies": [
            "aws_instance.kafka",
            "aws_security_group.allow_ssh",
            "aws_subnet.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02315c8e28c3f782d",
            "arn": "arn:aws:ec2:us-east-1:031864545038:instance/i-0c03c1a139c011caf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c03c1a139c011caf",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alerce",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-066730e0f0d1ceff0",
            "private_dns": "ip-108-0-0-237.ec2.internal",
            "private_ip": "108.0.0.237",
            "public_dns": "ec2-54-81-183-66.compute-1.amazonaws.com",
            "public_ip": "54.81.183.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f221f67a436c7e12",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f86cc97f49151d96",
            "tags": {
              "Name": "kafka-experiment-runner"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffb6a0225075efca"
            ]
          },
          "dependencies": [
            "aws_instance.kafka",
            "aws_instance.zookeeper",
            "aws_security_group.allow_ssh",
            "aws_subnet.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028d622bbd3676440",
            "arn": "arn:aws:ec2:us-east-1:031864545038:instance/i-0095f1a59174c2b6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0095f1a59174c2b6c",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alerce",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a37739564985dcc",
            "private_dns": "ip-108-0-0-171.ec2.internal",
            "private_ip": "108.0.0.171",
            "public_dns": "ec2-54-86-255-222.compute-1.amazonaws.com",
            "public_ip": "54.86.255.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06df2f5e351de3b71",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f86cc97f49151d96",
            "tags": {
              "Name": "kafka-experiment-zookeeper"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ffb6a0225075efca"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031864545038:internet-gateway/igw-0f41c68a38d7df482",
            "id": "igw-0f41c68a38d7df482",
            "owner_id": "031864545038",
            "vpc_id": "vpc-031cccd60433f924a"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f74c489d99c960e",
            "owner_id": "031864545038",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f41c68a38d7df482",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-031cccd60433f924a"
          },
          "dependencies": [
            "aws_internet_gateway.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c62a364f5bc0ee2",
            "route_table_id": "rtb-09f74c489d99c960e",
            "subnet_id": "subnet-0f86cc97f49151d96"
          },
          "dependencies": [
            "aws_internet_gateway.kafka",
            "aws_route_table.public_rt",
            "aws_subnet.kafka",
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031864545038:security-group/sg-0ffb6a0225075efca",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffb6a0225075efca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "JMX port",
                "from_port": 7075,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7075
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka port",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus port",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Zookeeper port",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "031864545038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-031cccd60433f924a"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031864545038:subnet/subnet-0f86cc97f49151d96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "108.0.0.0/24",
            "id": "subnet-0f86cc97f49151d96",
            "map_public_ip_on_launch": true,
            "owner_id": "031864545038",
            "tags": {
              "Name": "kafka-subnet"
            },
            "vpc_id": "vpc-031cccd60433f924a"
          },
          "dependencies": [
            "aws_vpc.kafka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031864545038:vpc/vpc-031cccd60433f924a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "108.0.0.0/16",
            "default_network_acl_id": "acl-02147eb16012f0a66",
            "default_route_table_id": "rtb-025c07a14395bb8c8",
            "default_security_group_id": "sg-035c743dba82bb634",
            "dhcp_options_id": "dopt-4f004c34",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-031cccd60433f924a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-025c07a14395bb8c8",
            "owner_id": "031864545038",
            "tags": {
              "Name": "kafka-vpc"
            }
          }
        }
      ]
    }
  ]
}